feat(category): Implement initial category section component

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <header class="header"></header>
     <main class="content">
         <section class="hero"></section>
-        <section class="category"></section>
+        <section class="upper-category"></section>
         <section class="rank"></section>
-        <section class="category"></section>
+        <section class="lower-category"></section>
     </main>
     <footer class="footer"></footer>
     <script type="module" src="main.js"></script>
