--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Netflix Clone</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header"></header>
-    <main class="content">
-        <section class="hero"></section>
-        <section class="upper-category"></section>
-        <section class="rank"></section>
-        <section class="lower-category"></section>
-    </main>
-    <footer class="footer"></footer>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
